--- a/formnestly_pro_site_starter/package.json
+++ b/formnestly_pro_site_starter/package.json
@@ -6,21 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .js,.ts,.tsx --max-warnings=0",
-    "postinstall": "husky install"
+    "lint": "eslint . --ext .js,.ts,.tsx --max-warnings=0"
+  },
+  "dependencies": {
+    "next": "15.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "framer-motion": "^11.0.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "clsx": "^2.1.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-  "typescript": "^5.6.3",
-  "eslint": "^9.10.0",
-  "eslint-config-next": "15.0.0",
-  "tailwindcss": "^3.4.10",
-  "postcss": "^8.4.47",
-  "autoprefixer": "^10.4.20",
-  "prettier": "^3.3.3",
-  "husky": "^9.1.6",
-  "lint-staged": "^15.2.10"
-},
-  "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.2.1",
     "typescript": "^5.6.3",
     "eslint": "^9.10.0",
     "eslint-config-next": "15.0.0",
@@ -30,5 +28,8 @@
     "prettier": "^3.3.3",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
