--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,7 @@
+[build]
+  base = "formnestly_pro_site_starter"
+  command = "npm run build"
+  publish = ".next"
 
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
